@@ -20,6 +20,9 @@ partman-auto (81) UNRELEASED; urgency=low
   * Rename auto_init_disk() to auto_init_disks() as it can now initialize
     multiple disks at once.  autopartition has been updated accordingly.
     Breaks: partman-auto-lvm (<< 29)
+  * Call autopartition-lvm on all disks in partman-auto/disk at once to enable
+    proper support of multiple disks partitioning.
+    Depends: partman-auto-lvm (>= 29)
 
  -- Jérémy Bobbio <lunar@debian.org>  Fri, 01 Aug 2008 22:49:11 +0000
 
